--- a/build.xml
+++ b/build.xml
@@ -51,8 +51,8 @@
     <property name="lib" location="lib"/>
 
     <patternset id="lib">
-        <include name="logback-classic-1.0.0.jar"/>
-        <include name="logback-core-1.0.0.jar"/>
+        <include name="logback-classic-1.1.2.jar"/>
+        <include name="logback-core-1.1.2.jar"/>
         <include name="jackson-core-2.1.4.jar"/>
         <include name="jackson-annotations-2.1.4.jar"/>
         <include name="jackson-databind-2.1.4.jar"/>
@@ -60,13 +60,13 @@
         <include name="jackson-dataformat-xml-2.1.4.jar"/>
         <include name="jackson-dataformat-yaml-2.1.4.jar"/>
         <include name="jackson-dataformat-csv-2.1.4.jar"/>
-        <include name="slf4j-api-1.6.4.jar"/>
+        <include name="slf4j-api-1.7.7.jar"/>
         <include name="org.restlet-2.2M3.jar"/>
         <include name="org.restlet.ext.jackson-2.2M3.jar"/>
         <include name="org.restlet.ext.simple-2.2M3.jar"/>
         <include name="org.restlet.ext.slf4j-2.2M3.jar"/>
         <include name="simple-5.1.1.jar"/>
-        <include name="netty-3.2.6.Final.jar"/>
+        <include name="netty-3.10.1.Final.jar"/>
         <include name="args4j-2.0.16.jar"/>
         <include name="concurrentlinkedhashmap-lru-1.2.jar"/>
         <include name="jython-2.5.2.jar"/>
@@ -75,6 +75,8 @@
         <include name="findbugs-annotations-2.0.1.jar" />
         <include name="findbugs-jsr305-2.0.1.jar" />
         <include name="derby-10.9.1.0.jar"/>
+        <include name="trove-3.0.3.jar"/>
+        <include name="java-json.jar"/>
     	<include name="openflowj-0.9.0-SNAPSHOT.jar"/>
     	<include name="openflowj-0.9.0-SNAPSHOT-javadoc.jar"/>
     	<include name="hamcrest-core-1.3.jar"/>
