Added sample configuration file and removed original one, also added some gitignore stuff

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ findbugs-results
 /thrift
 *.idea/*
 *.iml
+SyncDB
+src/main/resources/logback-test.xml
+logback.xml
+src/main/resources/floodlightdefault.properties
